fixed nav bar theme during light mode and dark mode toggling

--- a/css/landing.css
+++ b/css/landing.css
@@ -197,8 +197,7 @@ img {
 }
 
 .sign-in-btn-nav {
-  background-color: #161212;
-  color: #FFF;
+  color: black;
   padding: 5px 12px;
   border-radius: 10px;
 }
